Agregue una imagen local

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Borrador</title>
 </head>
 <body>
-    <h1>No se que poner</h1>
-    <p>todavia no saco el reposito</p>
-    <p>lpm!!</p>
+    <h1>Hola soy Ramiro Portilla</h1>
+    <p>todavia no saco el reposito!!</p>
+    <h3>Yo uso en cotidianamente para entretenerme o aprender cosas nuevas:</h3>
+    <a href= " https://www.youtube.com/ ">youtube</a><p> y</p> <a href="https://twitter.com">twitter</a>
+    <br>
+    <img src="img/Espanta.png" alt="Es un Espanta pajaros">
+    
+    <br>
+    <p>Una imagen de una url externa voy a probar</p>
+    <img src="https://superminiki.com/files/2020-06-29_09-10-02.png" alt="Este gato es un Maine Coon">
 </body>
 </html>
