--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "Ramy" content= "Borrador" >
     <title>Borrador</title>
 </head>
 <body>
     <h1>Hola soy Ramiro Portilla</h1>
     <p>todavia no saco el reposito!!</p>
     <h3>Yo uso en cotidianamente para entretenerme o aprender cosas nuevas:</h3>
-    <a href= " https://www.youtube.com/ ">youtube</a><p> y</p> <a href="https://twitter.com">twitter</a>
+    <a href= " https://www.youtube.com/ ">youtube</a>  <a href="https://twitter.com">twitter</a>
     <br>
     <img src="img/Espanta.png" alt="Es un Espanta pajaros">
     
